Solved flex layout issues for popover

--- a/ParcelWs/apps/trmrk-notes-lithtmlapp/src/app/tailwindcss/output.css
+++ b/ParcelWs/apps/trmrk-notes-lithtmlapp/src/app/tailwindcss/output.css
@@ -674,6 +674,14 @@ video {
   margin-top: 6rem;
 }
 
+.flex {
+  display: flex;
+}
+
+.inline-flex {
+  display: inline-flex;
+}
+
 .h-24 {
   height: 6rem;
 }
